feat: Complete authentication system implementation
- Implement User entity with all required fields (replaces Citizen)
- Add OTP-based authentication with registration verification
- Add password-based login with CAPTCHA support
- Implement JWT authentication with refresh tokens
- Add CAPTCHA generation and validation
- Create separate endpoints for registration OTP and login OTP
- Remove rate limiting for OTP requests (free OTP generation)
- Simplify database configuration (PostgreSQL only, removed H2)
- Add comprehensive DTOs and exception handling
- Update CORS to allow ports 4200 and 4201
- Add dummy OTP logging to console (SMS API pending)
- Fix Aadhar encryption validation issues
- Add entity scanning and repository configuration
- Remove H2 console and simplify security config
- Add database files to .gitignore