@@ -7,7 +7,6 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-import java.util.List;
 
 /**
  * CORS Configuration
@@ -20,19 +19,35 @@ public class CorsConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         
-        // Allow Angular frontend origin (update with actual frontend URL)
+        // Allow Angular frontend origins (localhost ports 4200 and 4201)
         configuration.setAllowedOrigins(Arrays.asList(
                 "http://localhost:4200",  // Angular default dev port
-                "http://localhost:3000"   // Alternative frontend port
+                "http://localhost:4201"   // Alternative Angular dev port
         ));
         
-        // Allow all HTTP methods
+        // Allow all HTTP methods (including OPTIONS for preflight)
         configuration.setAllowedMethods(Arrays.asList(
-                "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"
+                "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS", "HEAD"
         ));
         
-        // Allow all headers
-        configuration.setAllowedHeaders(List.of("*"));
+        // Allow all headers (must specify explicitly when allowCredentials is true)
+        configuration.setAllowedHeaders(Arrays.asList(
+                "Content-Type",
+                "Authorization",
+                "X-Requested-With",
+                "Accept",
+                "Origin",
+                "Access-Control-Request-Method",
+                "Access-Control-Request-Headers",
+                "Cache-Control",
+                "Pragma"
+        ));
+        
+        // Expose headers that frontend can access
+        configuration.setExposedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type"
+        ));
         
         // Allow credentials (cookies, authorization headers)
         configuration.setAllowCredentials(true);
